[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "pyedb"
dynamic = ["version"]
description = "Higher-Level Pythonic Ansys Electronics Data Base"
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "PyEDB developers", email = "simon.vandenbrouck@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "cffi>=1.16.0,<1.17; platform_system=='Linux'",
    "pywin32 >= 303;platform_system=='Windows'",
    "ansys-pythonnet >= 3.1.0rc3",
    "dotnetcore2 ==3.1.23;platform_system=='Linux'",
    "numpy>=1.20.0,<2",
    "pandas>=1.1.0,<2.3",
    "pydantic>=2.6.4,<2.9",
    "Rtree >= 1.2.0",
    "toml == 0.10.2",
    "scikit-rf"
    ]

[project.optional-dependencies]
tests = [
    "matplotlib>=3.5.0,<3.10",
    "mock>=5.1.0,<5.2",
    "pytest>=7.4.0,<8.4",
    "pytest-cov>=4.0.0,<5.1",
    "pytest-xdist>=3.5.0,<3.7",
    "scikit-rf"
]
doc = [
    "ansys-sphinx-theme>=0.10.0,<0.17",
    "imageio>=2.30.0,<2.35",
    "ipython>=8.13.0,<8.27",
    "jupyterlab>=4.0.0,<4.3",
    "jupytext>=1.16.0,<1.17",
    "matplotlib>=3.5.0,<3.10",
    "nbsphinx>=0.9.0,<0.10",
    "nbconvert < 7.17",
    "numpydoc>=1.5.0,<1.8",
    "pypandoc>=1.10.0,<1.14",
    # NOTE: Remove recommonmark once examples are reworked.
    "recommonmark",
    "Sphinx>=7.1.0,<7.4",
    "sphinx-autobuild==2024.2.4; python_version == '3.8'",
    "sphinx-autobuild==2024.2.4; python_version > '3.8'",
    "sphinx-copybutton>=0.5.0,<0.6",
    "sphinx-gallery>=0.14.0,<0.17",
    "sphinx_design>=0.4.0,<0.7",
]
full = [
    "matplotlib>=3.5.0,<3.10",
]


[tool.flit.module]
name = "pyedb"

[project.urls]
Bugs = "https://github.com/ansys/pyedb/issues"
Documentation = "https://edb.docs.pyansys.com"
Source = "https://github.com/ansys/pyedb"
Discussions = "https://github.com/ansys/pyedb/discussions"
 Releases = "https://github.com/ansys/pyedb/releases"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,*.a3dcomp,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,*.cdb,*.CDB,build,./factory/*,PKG-INFO,*.mypy_cache/*,./_unused/*'
ignore-words = "doc/styles/Vocab/ANSYS/accept.txt"
ignore-words-list = "renabled, sie, mot"
enable-colors = true

[tool.coverage.run]
relative_files = true
source = ["pyedb"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "legacy: mark test as related to the legacy API.",
    "unit: mark test as an unit test.",
    "integration: mark test as an integration test.",
    "system: mark test as a system test.",
    "slow: mark test as slow.",
    "no_licence: mark test that do not need a licence.",
]
testpaths = "tests"
#addopts = "-ra --cov=src/pyedb --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"

[tool.numpydoc_validation]
checks = [
    "GL06",  # Found unknown section
    "GL07",  # Sections are in the wrong order.
    "GL08",  # The object does not have a docstring
    "GL09",  # Deprecation warning should precede extended summary
    "GL10",  # reST directives {directives} must be followed by two colons
    # Return
    "RT04", # Return value description should start with a capital letter"
    "RT05", # Return value description should finish with "."
    # Summary
    "SS01",  # No summary found
    "SS02",  # Summary does not start with a capital letter
    "SS03",  # Summary does not end with a period
    "SS04",  # Summary contains heading whitespaces
    "SS05",  # Summary must start with infinitive verb, not third person
    # Parameters
    "PR10",  # Parameter "{param_name}" requires a space before the colon
    # separating the parameter name and type",
]
