[build-system]
requires = ["flit_core >=3.2,<3.11"] # THIS SHOULD BE REVERTED TO '["flit_core >=3.2,<4"]'
build-backend = "flit_core.buildapi"


[project]
name = "pyedb"
dynamic = ["version"]
description = "Higher-Level Pythonic Ansys Electronics Data Base"
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "PyEDB developers", email = "simon.vandenbrouck@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "cffi>=1.16.0,<1.18; platform_system=='Linux'",
    "pywin32 >= 303;platform_system=='Windows'",
    "ansys-pythonnet >= 3.1.0rc4",
    "dotnetcore2 ==3.1.23;platform_system=='Linux'",
    "numpy>=1.20.0,<3",
    "pandas>=1.1.0,<2.3",
    "pydantic>=2.6.4,<2.11",
    "Rtree >= 1.2.0",
    "toml == 0.10.2",
    "shapely",
    "scikit-rf",
    "ansys-edb-core",
    "ansys-api-edb",
    "psutil",
    ]

[project.optional-dependencies]
tests = [
    "matplotlib>=3.5.0,<3.11",
    "mock>=5.1.0,<5.2",
    "pytest>=7.4.0,<8.4",
    "pytest-cov>=4.0.0,<6.1",
    "pytest-xdist>=3.5.0,<3.7",
    "scikit-rf",
    "shapely"
]
doc = [
    "ansys-sphinx-theme>=0.10.0,<1.4",
    "imageio>=2.30.0,<2.37",
    "ipython>=8.13.0,<8.32",
    "jupyterlab>=4.0.0,<4.4",
    "jupytext>=1.16.0,<1.17",
    "matplotlib>=3.5.0,<3.11",
    "nbsphinx>=0.9.0,<0.10",
    "nbconvert < 7.17",
    "numpydoc>=1.5.0,<1.9",
    "pypandoc>=1.10.0,<1.16",
    # NOTE: Remove recommonmark once examples are reworked.
    "recommonmark",
    "Sphinx>=7.1.0,<8.2",
    "sphinx-autobuild==2021.3.14; python_version == '3.8'",
    "sphinx-autobuild==2024.10.3; python_version > '3.8'",
    "sphinx-copybutton>=0.5.0,<0.6",
    "sphinx-gallery>=0.14.0,<0.19",
    "sphinx_design>=0.4.0,<0.7",
    "shapely",

]
full = [
    "matplotlib>=3.5.0,<3.11",
    "shapely",
]


[tool.flit.module]
name = "pyedb"

[project.urls]
Bugs = "https://github.com/ansys/pyedb/issues"
Documentation = "https://edb.docs.pyansys.com"
Source = "https://github.com/ansys/pyedb"
Discussions = "https://github.com/ansys/pyedb/discussions"
 Releases = "https://github.com/ansys/pyedb/releases"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,*.a3dcomp,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,*.cdb,*.CDB,build,./factory/*,PKG-INFO,*.mypy_cache/*,./_unused/*,pyproject.toml'
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
ignore-words-list = "renabled, sie, mot"
enable-colors = true

[tool.coverage.run]
relative_files = true
source = ["pyedb"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "legacy: mark test as related to the legacy API.",
    "grpc: mark test as related to the gRPC API.",
    "unit: mark test as an unit test.",
    "integration: mark test as an integration test.",
    "system: mark test as a system test.",
    "slow: mark test as slow.",
    "no_licence: mark test that do not need a licence.",
]
testpaths = "tests"
#addopts = "-ra --cov=src/pyedb --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"

[tool.numpydoc_validation]
checks = [
    "GL06",  # Found unknown section
    "GL07",  # Sections are in the wrong order.
    "GL08",  # The object does not have a docstring
    "GL09",  # Deprecation warning should precede extended summary
    "GL10",  # reST directives {directives} must be followed by two colons
    # Return
    "RT04", # Return value description should start with a capital letter"
    "RT05", # Return value description should finish with "."
    # Summary
    "SS01",  # No summary found
    "SS02",  # Summary does not start with a capital letter
    "SS03",  # Summary does not end with a period
    "SS04",  # Summary contains heading whitespaces
    "SS05",  # Summary must start with infinitive verb, not third person
    # Parameters
    "PR10",  # Parameter "{param_name}" requires a space before the colon
    # separating the parameter name and type",
]
